[build-system]
requires = ["scikit-build-core>=0.9", "setuptools_scm[toml]>=7.0"]
build-backend = "scikit_build_core.build"

[project]
name = "python-zxc"
dynamic = ["version"]  
description = "ZXC: Package for high-performance, lossless, asymmetric compressions"
readme = "README.md"
license = "BSD-3-Clause"

[project.urls]
Homepage = "https://github.com/hellobertrand/zxc"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/package/_version.py"]

[tool.setuptools_scm]
root = "../../"
write_to = "wrappers/python/src/zxc/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"