[workspace]
members = ["zxc-sys", "zxc"]
resolver = "2"

[workspace.package]
version = "0.8.1"
authors = ["Bertrand Lebonnois"]
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
repository = "https://github.com/hellobertrand/zxc"
keywords = ["zxc", "compression", "lossless", "high-performance", "data-compression"]
categories = ["compression", "encoding"]
