[package]
name = "zxc"
description = "Safe Rust bindings to the ZXC compression library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
zxc-sys = { path = "../zxc-sys", version = "0.6.1" }
thiserror = "2.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
rand = "0.9"

[features]
default = []
